--- a/app/src/main/res/layout/activity_add_contacts.xml
+++ b/app/src/main/res/layout/activity_add_contacts.xml
@@ -140,6 +140,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <CheckBox
+        android:id="@+id/emergencyCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="605dp"
+        android:text="Επαφή Έκτακτης Ανάγκης"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/addContactButton"
         android:layout_width="match_parent"
