--- a/app/src/main/res/layout/activity_display_contacts.xml
+++ b/app/src/main/res/layout/activity_display_contacts.xml
@@ -135,6 +135,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <CheckBox
+        android:id="@+id/emergencyDisplayCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="605dp"
+        android:text="Επαφή Έκτακτης Ανάγκης"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/deleteDisplayContactIcon"
         android:layout_width="wrap_content"
