--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -201,6 +201,7 @@
             android:layout_height="48dp"
             android:layout_weight="1"
             android:layout_marginEnd="8dp"
+            android:textColor="@color/black"
             android:background="@drawable/background_rectangle" />
 
         <Spinner
@@ -209,6 +210,7 @@
             android:padding="12dp"
             android:layout_height="48dp"
             android:layout_weight="1"
+            android:textColor="@color/black"
             android:background="@drawable/background_rectangle" />
 
     </LinearLayout>
